--- a/lec02.ipynb
+++ b/lec02.ipynb
@@ -35,16 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimal\n",
-      "Production of Car A =  1200.0\n",
-      "Production of Car B =  6600.0\n",
-      "Maximum Profit =  333000000.0\n"
+     "ename": "NameError",
+     "evalue": "name 'pulp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [1]\u001B[0m, in \u001B[0;36m<cell line: 2>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# Instantiate our problem class\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m model \u001B[38;5;241m=\u001B[39m \u001B[43mpulp\u001B[49m\u001B[38;5;241m.\u001B[39mLpProblem(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mProfit maximising problem\u001B[39m\u001B[38;5;124m\"\u001B[39m, pulp\u001B[38;5;241m.\u001B[39mLpMaximize)\n\u001B[0;32m      3\u001B[0m \u001B[38;5;66;03m# create the decision variables\u001B[39;00m\n\u001B[0;32m      4\u001B[0m A \u001B[38;5;241m=\u001B[39m pulp\u001B[38;5;241m.\u001B[39mLpVariable(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mA\u001B[39m\u001B[38;5;124m'\u001B[39m, lowBound\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m, cat\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mInteger\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'pulp' is not defined"
      ]
     }
    ],
