--- a/lec02.ipynb
+++ b/lec02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "import pulp\n",
@@ -12,14 +12,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-06T00:08:22.845700Z",
-     "end_time": "2023-04-06T00:08:24.033500Z"
+     "start_time": "2023-04-06T22:17:00.852929Z",
+     "end_time": "2023-04-06T22:17:00.910723Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# Create the 'prob' variable to contain the problem data\n",
@@ -28,24 +28,149 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-05T23:16:53.791275Z",
-     "end_time": "2023-04-05T23:16:53.805555Z"
+     "start_time": "2023-04-06T22:17:00.868146Z",
+     "end_time": "2023-04-06T22:17:00.910723Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "x = pulp.LpVariable('x', lowBound=0, upBound=None, cat='Continuous')\n",
+    "y = pulp.LpVariable('y', lowBound=2, upBound=None, cat='Continuous')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-06T22:17:00.890469Z",
+     "end_time": "2023-04-06T22:17:00.910723Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "# Objective function, first one to input, put lable at end \"Z\"\n",
+    "my_lp_problem += 4 * x + 3 * y, \"Z\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-06T22:17:00.902410Z",
+     "end_time": "2023-04-06T22:17:00.915794Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "# Constraints\n",
+    "#my_lp_problem += y >= 2 # no needed since enter in variable as lowBound\n",
+    "my_lp_problem += 2 * y <= 25 - x\n",
+    "my_lp_problem += 4 * y >= 2 * x - 8\n",
+    "my_lp_problem += y <= 2 * x - 5\n",
+    "#my_lp_problem += y == 0 # this would make in \"infeasible\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-06T22:17:00.915794Z",
+     "end_time": "2023-04-06T22:17:00.933292Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pulp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [1]\u001B[0m, in \u001B[0;36m<cell line: 2>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# Instantiate our problem class\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m model \u001B[38;5;241m=\u001B[39m \u001B[43mpulp\u001B[49m\u001B[38;5;241m.\u001B[39mLpProblem(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mProfit maximising problem\u001B[39m\u001B[38;5;124m\"\u001B[39m, pulp\u001B[38;5;241m.\u001B[39mLpMaximize)\n\u001B[0;32m      3\u001B[0m \u001B[38;5;66;03m# create the decision variables\u001B[39;00m\n\u001B[0;32m      4\u001B[0m A \u001B[38;5;241m=\u001B[39m pulp\u001B[38;5;241m.\u001B[39mLpVariable(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mA\u001B[39m\u001B[38;5;124m'\u001B[39m, lowBound\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m, cat\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mInteger\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'pulp' is not defined"
+     "data": {
+      "text/plain": "1"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_lp_problem.solve()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-06T22:17:00.936020Z",
+     "end_time": "2023-04-06T22:17:00.990933Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status: Optimal\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Status:\", pulp.LpStatus[my_lp_problem.status])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-06T22:17:00.988344Z",
+     "end_time": "2023-04-06T22:17:01.001469Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x 14.5\n",
+      "y 5.25\n",
+      "73.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.name, x.varValue)\n",
+    "print(y.name, y.varValue)\n",
+    "print(pulp.value(my_lp_problem.objective))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-06T22:17:01.001469Z",
+     "end_time": "2023-04-06T22:17:01.081145Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal\n",
+      "Production of Car A =  1200.0\n",
+      "Production of Car B =  6600.0\n",
+      "Maximum Profit =  333000000.0\n"
      ]
     }
    ],
@@ -69,23 +194,14 @@
     "print(\"Production of Car A = \", A.varValue)\n",
     "print(\"Production of Car B = \", B.varValue)\n",
     "# Print our objective function value\n",
-    "print(\"Maximum Profit = \", pulp.value(model.objective))\n"
+    "print(\"Maximum Profit = \", pulp.value(model.objective))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-06T00:18:39.869975Z",
-     "end_time": "2023-04-06T00:18:40.145928Z"
+     "start_time": "2023-04-06T22:17:01.024381Z",
+     "end_time": "2023-04-06T22:17:01.081145Z"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
    }
   }
  ],
